8202289: Non-empty directory in module path is not handled properly at CDS/AppCDS dump time 8202519: Crash during large AppCDS dump

Convert the source of a class into canonical form before comparing witha shared path table entry.

Reviewed-by: jiangli, iklam